# src/main/java/com/demo/employees/exception/ApiServiceExceptionHandler.java
@@ -1,0 +1,9 @@
+package com.demo.employees.exception;
+
+import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
+
+@ControllerAdvice
+public class ApiServiceExceptionHandler extends ResponseEntityExceptionHandler {
+
+}
