# src/openapi/employees-api.yml
@@ -1,12 +1,51 @@
 openapi: "3.0.0"
 info:
   version: 1.0.0
-  title: Open API Protobuf demo
+  title: Open API demo
   license:
     name: MIT
 servers:
   - url: http://localhost:8080/v1
 paths:
+  /companies:
+    get:
+      summary: List all companies
+      operationId: listCompanies
+      tags:
+        - companies
+      responses:
+        '200':
+          description: A array of companies
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CompaniesResponse"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+    post:
+      summary: Create a company
+      operationId: createCompany
+      tags:
+        - companies
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CompanyRequest'
+        required: true
+      responses:
+        '201':
+          description: Null response
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
   /employees:
     get:
       summary: List all employees
@@ -33,7 +72,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Employees"
+                $ref: "#/components/schemas/EmployeesResponse"
         default:
           description: unexpected error
           content:
@@ -49,7 +88,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Employee'
+              $ref: '#/components/schemas/EmployeeRequest'
         required: true
       responses:
         '201':
@@ -79,7 +118,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Employee"
+                $ref: "#/components/schemas/EmployeeResponse"
         default:
           description: unexpected error
           content:
@@ -88,10 +127,39 @@ paths:
                 $ref: "#/components/schemas/Error"
 components:
   schemas:
-    Employee:
+    CompanyRequest:
+      type: object
+      properties:
+        company:
+          $ref: "#/components/schemas/Company"
+    EmployeeRequest:
+      type: object
+      properties:
+        company:
+          $ref: "#/components/schemas/Employee"
+    CompanyResponse:
+      type: object
+      properties:
+        company:
+          $ref: "#/components/schemas/Company"
+    EmployeeResponse:
+      type: object
+      properties:
+        company:
+          $ref: "#/components/schemas/Employee"
+    CompaniesResponse:
+      type: object
+      properties:
+        company:
+          $ref: "#/components/schemas/Companies"
+    EmployeesResponse:
+      type: object
+      properties:
+        company:
+          $ref: "#/components/schemas/Employees"
+    Company:
       type: object
       required:
-        - id
         - name
       properties:
         id:
@@ -99,8 +167,28 @@ components:
           format: int64
         name:
           type: string
-        tag:
+        employees:
+          $ref: "#/components/schemas/Employees"
+    Employee:
+      type: object
+      required:
+        - firstname
+        - lastname
+        - birthdate
+      properties:
+        id:
+          type: integer
+          format: int64
+        firstname:
           type: string
+        lastname:
+          type: string
+        birthdate:
+          type: string
+    Companies:
+      type: array
+      items:
+        $ref: "#/components/schemas/Company"
     Employees:
       type: array
       maxItems: 100
@@ -112,8 +200,14 @@ components:
         - code
         - message
       properties:
-        code:
+        status:
           type: integer
           format: int32
-        message:
+        title:
+          type: string
+        type:
+          type: string
+        detail:
+          type: string
+        instance:
           type: string
